--- a/app/core/templates/index.html
+++ b/app/core/templates/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="">
-        <form action="/results/" method="post">{% csrf_token %}
-            <div>
-                <textarea name="text" id="" cols="30" rows="10"></textarea>
-            </div>
-            <button type="submit">Submit</button>
-        </form>
-    </div>
+    <section class="section">
+        <div class="container">
+            <h1 class="title">
+                Enter your text
+            </h1>
+            <form class="form" action="/results/" method="post">{% csrf_token %}
+                <div>
+                    <textarea class="input textarea" name="text" id="" cols="10" rows="5"></textarea>
+                </div>
+                <button class="button mt-4" type="submit">Submit</button>
+            </form>
+        </div>
+    </section>
 </body>
 </html>
