--- a/app/core/templates/index.html
+++ b/app/core/templates/index.html
@@ -22,4 +22,11 @@
         </div>
     </section>
 </body>
+<footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Texts Analyzer</strong> by Rares Mosescu, Claudiu Labus and Ioan Anghel.
+      </p>
+    </div>
+  </footer>
 </html>
