--- a/app/core/templates/index.html
+++ b/app/core/templates/index.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="file has-name is-hidden">
                     <label class="file-label">
-                        <input name="file" class="file-input" type="file" accept=".txt" name="resume">
+                        <input name="file" class="file-input" type="file" accept=".txt">
                         <span class="file-cta">
                             <span class="file-icon">
                                 <i class="fas fa-upload"></i>
