--- a/app/core/templates/base.html
+++ b/app/core/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,17 +8,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link rel="stylesheet" href="{% static 'core/css/styles.css' %}">
   <title>Texts Analyzer</title>
 </head>
 
-<body class="container">
+<body>
+  <div class="has-text-centered mt-4">
+    <span><span class="title has-text-centered">Conversation Analyzer<br></span><span class="has-text-centered">Powered by AI</span></span>
+  </div>
   {% block content %}
   {% endblock content %}
 
-  <footer class="footer">
-    <div class="content has-text-centered">
+  <footer>
+    <div class="content has-text-centered has-background-black p-4 has-text-white">
       <p>
-        <strong>Texts Analyzer</strong> by Rares Mosescu, Claudiu Labus and Ioan Anghel.
+        <strong class="has-text-white">Conversation Analyzer</strong> powered by AI<br>
+        <strong class="has-text-white">Contributors:</strong> Rares Mosescu, Claudiu Labus and Ioan Anghel <br>
+        University of Bucharest
       </p>
     </div>
   </footer>
