--- a/app/core/templates/results.html
+++ b/app/core/templates/results.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <title>Results</title>
-</head>
-<body>
+{% extends 'base.html' %} {% block content %}
     <section class="section">
         <div class="container">
             <h1 class="title">
@@ -34,6 +25,5 @@
             </div> 
         </div>
     </section>
-</body>
-</html>
+{% endblock %}
 
