--- a/app/core/templates/index.html
+++ b/app/core/templates/index.html
@@ -4,18 +4,18 @@
 <section class="section" >
   
   <div class="container" id="centered-container">
-    <h1 class="title is-5">Why many people like this tool</h1>
+    <h1 class="title is-5">Why many people like this app</h1>
 
     <div class="info mb-6">
       <span class="icon">
         <i class="fas fa-angle-right"></i>
-      </span>You'll be amused by the topics you and your friends talked about the most (and how many times you apologized to each other) <br>
+      </span>You'll be amused and surprised by the topics you and your friends talked about the most (e.g. many people apologise a lot) <br>
       <span class="icon">
         <i class="fas fa-angle-right"></i>
       </span>Learn from your communication mistakes and habits and become a better version of yourself <br>
       <span class="icon">
         <i class="fas fa-angle-right"></i>
-      </span>We don't store any info and, because we're still testing, it's completely free
+      </span>We don't store any info and, because we're still testing, it's completely free to play around with it
     </div>
 
     <div class="container">
