--- a/app/core/templates/results_RO.html
+++ b/app/core/templates/results_RO.html
@@ -2,15 +2,14 @@
     <section class="section">
         <div class="container">
             <h1 class="title">
-                Results
+                Rezultate
             </h1>
-            <h1 class="title is-6">If input is empty, it will use a sample text</h1>
             <div class="mt-5">
                 <table class="table-container results">
                     <thead>
                         <tr>
-                        <th>Noun</th>
-                        <th>Number of times used</th>
+                        <th>Subiect detectat&nbsp&nbsp</th>
+                        <th>De cate ori a fost discutat</th>
                         </tr>
                     </thead>
                     <tbody>
