--- a/app/core/templates/results.html
+++ b/app/core/templates/results.html
@@ -1,29 +1,37 @@
 {% extends 'base.html' %} {% block content %}
-    <section class="section">
-        <div class="container">
-            <h1 class="title">
-                Results
-            </h1>
-            <h1 class="title is-6">If input is empty, it will use a sample text</h1>
-            <div class="mt-5">
-                <table class="table-container results">
-                    <thead>
-                        <tr>
-                        <th>Noun</th>
-                        <th>Number of times used</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for k,v in results %}
-                            <tr>
-                                <td>{{k}}</td>
-                                <td>{{v}}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>   
-            </div> 
-        </div>
-    </section>
+<section class="section">
+  <div class="container">
+    <h1 class="title">Results</h1>
+    <h1 class="title is-6">If input is empty, it will use a sample text</h1>
+    <div class="mt-5">
+      <table class="table-container results">
+        <thead>
+          <tr>
+            <th>Noun</th>
+            <th>Number of times used</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for k,v in results %}
+          <tr>
+            <td>{{k}}</td>
+            <td>{{v}}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+</section>
+<form action="/" method="post" class="form">
+  {% csrf_token %}
+  <textarea
+    class="textarea is-primary mx-5"
+    placeholder="Feedback"
+    name="feedback"
+  ></textarea>
+  <button id="submit" class="button mx-5 my-2 is-link" type="submit">
+    Submit
+  </button>
+</form>
 {% endblock %}
-
