--- a/app/core/static/core/css/styles.css
+++ b/app/core/static/core/css/styles.css
@@ -2,6 +2,9 @@
     #centered-container {
         width: 50vw;
     }
+    #results-buttons {
+        width: 425px;
+    }
 }
 
 .no-link-decoration {
@@ -24,3 +27,4 @@ footer{
     /* margin-top: auto; */
     font-size: small;
 }
+
