--- a/app/core/templates/results_EN.html
+++ b/app/core/templates/results_EN.html
@@ -1,36 +1,33 @@
 {% extends 'base.html' %} {% block content %} {% load static %}
 
 <section class="section">
-  <div class="container" id="centered-container">
-    <h1 class="title">Results</h1>
-    <div class="mt-5">
-      <table class="table-container results">
-        <thead>
-          <tr>
-            <th>Noun</th>
-            <th>Number of times used</th>
-          </tr>
-        </thead>
-        <tbody id="tabel">
-          {% for k,v in results %}
-          <tr>
-            <td>{{k}}</td>
-            <td>{{v}}</td>
-          </tr>
-          {% endfor %}
-          <tr style="color: white">
-            <td>Daca vrei intra daca nu nu etc</td>
-          </tr>
-        </tbody>
-      </table>
+  <div class="container">
+     <div class="columns" style="display: flex; justify-content: center">
+      <div
+        class="column is-half"
+        id="results-container"
+      >
+        <div class="column" style="text-align: center; font-size: 1.5rem">
+          Results
+        </div>
+        {% for k,v in results %}
+        <div
+          class="column"
+          id="main_results"
+        >
+          <p class="yrd">{{k}}</p>
+          <p class="yrd">{{v}}</p>
+        </div>
+        {% endfor %}
+      
       <div class="pagination" id="results-buttons">
         <a>
-          <button style="width: 200px; height: 100%; white-space: normal;" class="button is-black mr-2 pagination-previous" id="share" class="button is-link pagination-next" data-clipboard-target="#tabel">
+          <button style="width: 200px; height: 100%; white-space: normal;" class="button is-black mr-2 butoane pagination-previous" id="share" class="button is-link pagination-next">
             Copy results to clipboard
           </button>
         </a>
         <a download="text_analyzer_results.png" href="{% static 'text_analyzer_results.png' %}" title="ImageName">
-          <button style="width: 200px; height: 100%; white-space: normal;" class="button mr-2 pagination-previous">Download results as image</button>
+          <button style="width: 200px; height: 100%; white-space: normal;" class="button mr-2 butoane pagination-previous">Download results as image</button>
         </a>
       </div>
     </div>
@@ -60,16 +57,20 @@
   </div>
 </section>
 
-{% endblock %}{% block scripts %}
+{% endblock %}
+{% block scripts %}
 <script>
-  var clipboard = new ClipboardJS(".button");
+  $(function(){
+    const results = {{ json_results|safe }};
 
-  clipboard.on("success", function (e) {
-    console.log(e);
-  });
-
-  clipboard.on("error", function (e) {
-    console.log(e);
-  });
+    let text = ''
+    for (let i in results)
+      text += `${i}: ${results[i]}\n`
+    
+    text += 'If u wanna try go get me a beer https//here-is-link'
+    $('#share').click({}, () => {
+    navigator.clipboard.writeText(text)
+    })
+});
 </script>
 {% endblock scripts %}
