--- a/app/core/templates/results_RO.html
+++ b/app/core/templates/results_RO.html
@@ -1,28 +1,93 @@
-{% extends 'base.html' %} {% block content %}
-    <section class="section">
-        <div class="container">
-            <h1 class="title">
-                Rezultate
-            </h1>
-            <div class="mt-5">
-                <table class="table-container results">
-                    <thead>
-                        <tr>
-                        <th>Subiect detectat&nbsp&nbsp</th>
-                        <th>De cate ori a fost discutat</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for k,v in results %}
-                            <tr>
-                                <td>{{k}}</td>
-                                <td>{{v}}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>   
-            </div> 
-        </div>
-    </section>
-{% endblock %}
+{% extends 'base.html' %} {% block content %} {% load static %}
 
+<section class="section">
+  <div class="container">
+     <div class="columns" style="display: flex; justify-content: center">
+      <div
+        class="column is-half"
+        style="
+          background: rgb(236, 236, 236);
+          border-radius: 30px;
+          padding: 2em;
+          padding-top: 0;
+        "
+      >
+        <div class="column" style="text-align: center; font-size: 1.5rem">
+          Rezultate
+        </div>
+        {% for k,v in results %}
+        <div
+          class="column"
+          style="
+            background: rgb(219, 219, 219);
+            box-shadow: 1px 2px rgb(179, 179, 179);
+            border-radius: 30px;
+            margin-bottom: 0.3em;
+            display: flex;
+            justify-content: space-between;
+            padding-right: 1em;
+            padding-left: 1em;
+            font-size: 1.3rem;
+            padding-top: 0.2em;
+            padding-bottom: 0.2em;
+          "
+        >
+          <p class="yrd">{{k}}</p>
+          <p class="yrd">{{v}}</p>
+        </div>
+        {% endfor %}
+      
+      <div class="pagination" id="results-buttons">
+        <a>
+          <button style="width: 200px; height: 100%; white-space: normal;" class="button is-black mr-2 pagination-previous" id="share" class="button is-link pagination-next">
+            Copiaza rezultatele
+          </button>
+        </a>
+        <a download="text_analyzer_results.png" href="{% static 'text_analyzer_results.png' %}" title="ImageName">
+          <button style="width: 200px; height: 100%; white-space: normal;" class="button mr-2 pagination-previous">Descarca rezultatele intr-o imagine</button>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container" id="centered-container">
+    <h1 class="title mt-5">Ce parere ai?</h1>
+    <h2 class="title is-6">Share your feedback, suggestions, any ideas about what you'd want us to continue this app...</h2>
+    <form action="/" method="post" class="form">
+      {% csrf_token %}
+      <textarea
+        class="textarea is-primary"
+        placeholder="Feedback"
+        name="feedback"
+      ></textarea>
+      <button
+        id="submit"
+        data-clipboard-target="#tabel"
+        class="button my-2 is-link"
+        type="submit"
+      >
+        Trimite
+      </button>
+    </form>
+  </div>
+</section>
+
+{% endblock %}
+{% block scripts %}
+<script>
+  $(function(){
+    const results = {{ json_results|safe }};
+
+    let text = ''
+    for (let i in results)
+      text += `${i}: ${results[i]}\n`
+    
+    text += 'If u wanna try go get me a beer https//here-is-link'
+    $('#share').click({}, () => {
+    navigator.clipboard.writeText(text)
+    })
+});
+</script>
+{% endblock scripts %}
